# Cafe

./: .gitignore  README.md  main.py
BACKEND/: Dockerfile  pyproject.toml
BACKEND/src/config/: messages.py
DATABASE/: README.md
FRONTEND/: Dockerfile  README.md
deploy/: docker-compose-project.yml  docker-compose.yml
scripts/: docker_db_stop.cmd  docker_db_stop.sh
