[tool.poetry]
name = "Biopharma services"
version = "0.1.0"
description = "Applications management system app"
authors = ["Oleksandr Dyshliuk <dishalex@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <=3.13"
fastapi = "^0.111.0"
SQLAlchemy = "^2.0.31"
alembic = "^1.13.2"
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
